# QBL

./: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  duelling_bandits.cpp  filter_basic_benchmarks.sh  filter_exp3_benchmarks.sh  filter_fpl_benchmarks.sh  filter_tsallis_benchmarks.sh  main.cpp  optimal_parameter_finder.cpp  process_benchmarks.sh  run_benchmark.sh  run_generic.sh  runner.h
Aglimpse/: README.md  experiment.py  glimpseonline.py  main.py  plotter.py  repl_assistant.py  requirements.txt  subgraphs.py  util.py
Aglimpse/bandits/: bandit_benchmark.py  reference_bandit.py
Aglimpse/experiments/: bandit_glimpse_experiments.py  bandit_versus_glimpse.py  bandit_weight.py  glimpse_experiments.py  pretrained_bandit_versus_glimpse.py  subgraph_experiments.py  timed_bandit_trainer.py
Aglimpse/glimpse/: main.py
Aglimpse/graphs/: README.md
Aglimpse/models/: README.md
Aglimpse/plotting/: plot_bandit_vs_glimpse.py
DBABandits-modded/: README.md  constants.py  q_gen_generate_v2.py  sim_run_experiment.py  updatable_priority_queue.py
algorithms/: Uniformbandit.h
algorithms/DEXP/: DExp3.h  (+1 more)
benchmarks/: Exp3.1.h  Exp3.h  Exp3_dum.h  Exp3_eta.h  Exp3_heap.h  Exp3ixtor.h  Exp3m.h  FPL.h  FPL_H.h  FPL_buckets.h  FPL_toplog.h  Policy.h  QBL.h  Tsallis_LTU.h  Tsallis_approx_rv.h  Tsallis_iw.h  Tsallis_rv.h  UCB.h  exp3light.h  exp3lightheap.h
datasets/: Dataset_movielens.h  data_generators.h  dataloaders.h  dataset.h  dataset_explore_no_more.h  dataset_simple_adversarial.h  dataset_simple_stochastic.h
datastructures/: Incremental_LSE_sum_heap.h  Incremental_cnt_sum_heap.h  Incremental_product_heap.h  Incremental_sum_heap.h  max_heap.h
example_outputs/: basic_sample.csv  basic_update.csv  combined.csv  combined_out.csv  header.csv  out.csv  raw_out.csv  sample.csv  sample_out.csv  update.csv  update_out.csv
experiments/: AdversarialExperimentRunner.h  DuelArena.h  Exp3ComparisonRunner.h  ExploreNoMoreRunner.h  FPLComparisonRunner.h  GenericBanditRunner.h  TheoreticalBoundRunner.h  TsallisComparisonRunner.h
plotting/: benchmark.py  colors.py  exponential.py  plot_Explore_No_More.py  plot_adversarial.py  plot_adversarial_exp3m.py  plot_compare.py  plot_regret.py  plot_theoretical_strong_regret_T_FPL_comparison.py  plot_theoretical_strong_regret_T_single.py  plot_theoretical_strong_regret_k_FPL_comparison.py  plot_theoretical_strong_regret_k_single.py  plot_theoretical_weak_regret_T_Tsallis_comparison.py  plot_theoretical_weak_regret_T_fid_comparison.py  plot_theoretical_weak_regret_T_lad_comparison.py  plot_theoretical_weak_regret_T_single.py  plot_theoretical_weak_regret_k_Tsallis_comparison.py  plot_theoretical_weak_regret_k_fid_comparison.py  plot_theoretical_weak_regret_k_lad_comparison.py  plot_theoretical_weak_regret_k_single.py  plot_theoretical_weak_regret_m_single.py  plot_variance.py  plot_weights.py
utilities/: argsort.h  chaosmaps.h  chaosplots.py  eta_mean_std_writer.h  exec_command.h  random_gen.h  result_writer.h  standard_deviation.cpp  sum_of_range.h  updateable_priority_queue.h  weight_exporter.h
(+88 files in other folders)
